--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         </div>
     </div>
 
-    <header class="menu-bg">
-        <div class="container menu">
-            <div class="menu-logo">
+    <header class="header-bg">
+        <div class="container header">
+            <div class="header-logo">
                 <a href="./index.html">FlexBlog</a>
             </div>
             <nav>
