Seção Sobre concluida.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </header>
 
-    <h1 class="introducao">Brando Arquitetura: Sofisticação e <br>minimalismo para construir casas de luxo</h1>
+    <h1 class="titulo container">Brando Arquitetura: Sofisticação e minimalismo para construir casas de luxo</h1>
 
     <section class="sobre container" id="sobre" aria-label="Seção Sobre">
         <div class="sobre-info">
@@ -68,7 +68,7 @@
 
         <div class="sobre-imagens">
             <img src="img/sobre1.jpg" alt="Mulher em pé de frente a uma janela." width="220" height="550">
-            <img src="img/sobre2.jpg" alt="Pessoa desenhando em uma pequena tela com um pincel." width="220"
+            <img src="img/sobre2.jpg" alt="Art minimalista" width="220"
                 height="275">
         </div>
     </section>
