Seção produtos finalizada.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <section class="sobre container" id="sobre" aria-label="Seção Sobre">
         <div class="sobre-info">
-            <h1>Sobre</h1>
+            <h1 class="subtitulos">Sobre</h1>
             <p>A arquitetura minimalista é vista como a grande tendência das últimas décadas. O uso de pouco itens
                 de decoração, artigos geométricos, móveis com design simples e anguloso, cores neutras, valorização
                 da modernidade e da tecnologia são alguns atributos que caracterizam facilmente o estilo
@@ -74,7 +74,7 @@
     </section>
 
     <section class="produtos container" id="produtos" aria-label="Seção de Produtos">
-        <h1>Produtos</h1>
+        <h1 class="subtitulos">Produtos</h1>
         <div class="produtos-container">
             <div class="produtos-item purple">
                 <h2>Purple</h2>
