Seção preços finalizada.

--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
             <span><sup>R$</sup>19</span>
 
             <ul>
-                <li>Planos limitados <span>.</span></li>
-                <li>Acesso Restrito <span>.</span></li>
-                <li>Conteúdo Secreto <span>.</span></li>
-                <li>Suporte 24h <span>.</span></li>
+                <li>Planos limitados</li>
+                <li>Acesso Restrito</li>
+                <li>Conteúdo Secreto</li>
+                <li>Suporte 24h</li>
             </ul>
             <a href="#">Comprar</a>
         </div>
@@ -109,11 +109,11 @@
             <span><sup>R$</sup>39</span>
 
             <ul>
-                <li>Planos limitados <span>.</span></li>
-                <li>Acesso Restrito <span>.</span></li>
-                <li>Conteúdo Secreto <span>.</span></li>
-                <li>Suporte 24h <span>.</span></li>
-                <li>Comprar Exclusivas <span>.</span></li>
+                <li>Planos limitados</li>
+                <li>Acesso Restrito</li>
+                <li>Conteúdo Secreto</li>
+                <li>Suporte 24h</li>
+                <li>Comprar Exclusivas</li>
             </ul>
             <a href="#">Comprar</a>
         </div>
@@ -121,12 +121,12 @@
             <h2>Ouro</h2>
             <span><sup>R$</sup>79</span>
             <ul>
-                <li>Planos limitados <span>.</span></li>
-                <li>Acesso Restrito <span>.</span></li>
-                <li>Conteúdo Secreto <span>.</span></li>
-                <li>Suporte 24h <span>.</span></li>
-                <li>Comprar Exclusivas <span>.</span></li>
-                <li>1000g de Armazenagem <span>.</span></li>
+                <li>Planos limitados</li>
+                <li>Acesso Restrito</li>
+                <li>Conteúdo Secreto</li>
+                <li>Suporte 24h</li>
+                <li>Comprar Exclusivas</li>
+                <li>1000g de Armazenagem</li>
             </ul>
             <a href="#">Comprar</a>
         </div>
