Seção qualidade finalizada.

--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
 
         <div class="sobre-imagens">
             <img src="img/sobre1.jpg" alt="Mulher em pé de frente a uma janela." width="220" height="550">
-            <img src="img/sobre2.jpg" alt="Art minimalista" width="220"
-                height="275">
+            <img src="img/sobre2.jpg" alt="Art minimalista" width="220" height="275">
         </div>
     </section>
 
@@ -132,55 +131,47 @@
         </div>
     </section>
 
-    <section class="qualidade" aria-label="Seção Qualidade">
-        <div class="container">
-            <div class="qualidade-item">
-                <h2>Inteligente</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, architecto perspiciatis
-                    aliquam enim cum tempora distinctio iste deleniti dolor mollitia tempore quos reprehenderit, velit
-                    deserunt.
-                </p>
-            </div>
+    <section class="qualidade container" aria-label="Seção Qualidade">
+        <div class="qualidade-item item-purple">
+            <h2>Inteligente</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit eos unde voluptas. Neque modi architecto
+                odit voluptate sit.
+            </p>
+        </div>
 
-            <div class="qualidade-item">
-                <h2>Compacto</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, necessitatibus odio laborum illo
-                    repellat delectus dolores eum adipisci sint fugit consectetur maxime doloribus perspiciatis
-                    blanditiis? Dolore tempora omnis odit assumenda.
-                </p>
-            </div>
+        <div class="qualidade-item item-red">
+            <h2>Compacto</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio rem, quisquam accusantium itaque
+                eius quis eaque mollitia, a similique autem, omnis harum illum. Est, quo!
+            </p>
+        </div>
 
-            <div class="qualidade-item">
-                <h2>Econômico</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, architecto perspiciatis
-                    aliquam enim cum tempora distinctio iste deleniti dolor mollitia tempore quos reprehenderit, velit
-                    deserunt.
-                </p>
-            </div>
+        <div class="qualidade-item item-azul">
+            <h2>Econômico</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores repellat obcaecati architecto
+                praesentium fugit consectetur est corrupti. Quos?
+            </p>
+        </div>
 
-            <div class="qualidade-item">
-                <h2>Transparente</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, necessitatibus odio laborum illo
-                    repellat delectus dolores eum adipisci sint fugit consectetur maxime doloribus perspiciatis
-                    blanditiis? Dolore tempora omnis odit assumenda.
-                </p>
-            </div>
+        <div class="qualidade-item item-purple">
+            <h2>Transparente</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit eos unde voluptas. Neque modi architecto
+                odit voluptate sit.
+            </p>
+        </div>
 
-            <div class="qualidade-item">
-                <h2>Opaco</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, architecto perspiciatis
-                    aliquam enim cum tempora distinctio iste deleniti dolor mollitia tempore quos reprehenderit, velit
-                    deserunt.
-                </p>
-            </div>
+        <div class="qualidade-item item-red">
+            <h2>Opaco</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio rem, quisquam accusantium itaque
+                eius quis eaque mollitia, a similique autem, omnis harum illum. Est, quo!
+            </p>
+        </div>
 
-            <div class="qualidade-item">
-                <h2>Sustentável</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, necessitatibus odio laborum illo
-                    repellat delectus dolores eum adipisci sint fugit consectetur maxime doloribus perspiciatis
-                    blanditiis? Dolore tempora omnis odit assumenda.
-                </p>
-            </div>
+        <div class="qualidade-item item-azul">
+            <h2>Sustentável</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores repellat obcaecati architecto
+                praesentium fugit consectetur est corrupti. Quos?
+            </p>
         </div>
     </section>
 
