seção de contato finalizada.

--- a/index.html
+++ b/index.html
@@ -175,14 +175,14 @@
         </div>
     </section>
 
-    <section class="contato" id="contato" aria-label="Seção de Contatos">
-        <div class="container">
+    <section class="contato-bg" id="contato" aria-label="Seção de Contatos">
+        <div class="container contato">
             <div class="contato-info">
                 <h1>Newsletter</h1>
                 <p>assine e fique por dentro de todas as novidades</p>
             </div>
             <form class="contato-formulario">
-                <input type="email" name="email" id="email" placeholder="Seu e-mail">
+                <input type="email" name="email" id="email" placeholder="Seu e-mail" autofocus>
                 <button type="submit">Assinar</button>
             </form>
         </div>
