--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.min.css">
     <link rel="shortcut icon" href="img/blogger.png" type="image/x-icon">
     <title>FlexBlog</title>
 </head>
@@ -182,13 +182,13 @@
                 <p>assine e fique por dentro de todas as novidades</p>
             </div>
             <form class="contato-formulario">
-                <input type="email" name="email" id="email" placeholder="Seu e-mail" autofocus>
+                <input type="email" name="email" id="email" placeholder="Seu e-mail">
                 <button type="submit">Assinar</button>
             </form>
         </div>
     </section>
 
-    <footer class="footer container">
+    <footer class="footer">
         <p>FlexBlox &copy Todos os direitos reservados.</p>
     </footer>
 </body>
